--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^26.0.15",
     "@types/react": "^17.0.10",
     "@types/react-dom": "^17.0.7",
+    "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "autoprefixer": "^10.0.1",
